--- a/src/app/aging/components/window/window.component.scss
+++ b/src/app/aging/components/window/window.component.scss
@@ -343,3 +343,9 @@
   font-size: 12px;
   margin-bottom: 10px;
 }
+
+.automate-link:hover {
+  color: #ffa216;
+  text-decoration: underline;
+  cursor: pointer;
+}
