--- a/src/app/aging/components/window/window.component.html
+++ b/src/app/aging/components/window/window.component.html
@@ -1,6 +1,6 @@
 <div class="header-info header-aging">
   <div class="aging-title">
-    Aging Simulator {{isAutomaticMode}}
+    Aging Simulator
     <div class="sheltoms-near-title">
       <img class="shake-lr" src="assets/stacked_sheltoms.png"/>
     </div>
